--- a/app/frontend.html
+++ b/app/frontend.html
@@ -61,7 +61,7 @@
                 </div>
             </header>
             <!-- END Site Header -->
-          <section class="site-section site-section-light site-section-top parallax-image themed-background-default" style="background-image: url('frontend/img/frontend_office.jpg')">
+          <section class="site-section site-section-light site-section-top parallax-image themed-background-default" style="background-image: url('/publicfrontend_office.jpg')">
             <div class="container">
               <h1 class="text-center animation-slideDown"><strong>Kickstart your city's entrepreneurial ecosystem</strong></h1>
               <h2 class="text-center animation-slideDown push">A framework for building and measuring startup communities, from our experience creating the <a href="http://www.entrepreneur.com/article/223997" target="_blank">most entrepreneurial city in America</a>.<br/><span style="font-size:12px">(Entrepreneur Mag)</span></h2>
