moved frontend to public

--- a/app/frontend/blog.html
+++ b/app/frontend/blog.html
@@ -14,33 +14,33 @@
 
         <!-- Icons -->
         <!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
-        <link rel="shortcut icon" href="img/favicon.png">
-        <link rel="apple-touch-icon" href="img/icon57.png" sizes="57x57">
-        <link rel="apple-touch-icon" href="img/icon72.png" sizes="72x72">
-        <link rel="apple-touch-icon" href="img/icon76.png" sizes="76x76">
-        <link rel="apple-touch-icon" href="img/icon114.png" sizes="114x114">
-        <link rel="apple-touch-icon" href="img/icon120.png" sizes="120x120">
-        <link rel="apple-touch-icon" href="img/icon144.png" sizes="144x144">
-        <link rel="apple-touch-icon" href="img/icon152.png" sizes="152x152">
-        <link rel="apple-touch-icon" href="img/icon180.png" sizes="180x180">
+        <link rel="shortcut icon" href="../../public/img/favicon.png">
+        <link rel="apple-touch-icon" href="../../public/img/icon57.png" sizes="57x57">
+        <link rel="apple-touch-icon" href="../../public/img/icon72.png" sizes="72x72">
+        <link rel="apple-touch-icon" href="../../public/img/icon76.png" sizes="76x76">
+        <link rel="apple-touch-icon" href="../../public/img/icon114.png" sizes="114x114">
+        <link rel="apple-touch-icon" href="../../public/img/icon120.png" sizes="120x120">
+        <link rel="apple-touch-icon" href="../../public/img/icon144.png" sizes="144x144">
+        <link rel="apple-touch-icon" href="../../public/img/icon152.png" sizes="152x152">
+        <link rel="apple-touch-icon" href="../../public/img/icon180.png" sizes="180x180">
         <!-- END Icons -->
 
         <!-- Stylesheets -->
         <!-- Bootstrap is included in its original form, unaltered -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../public/css/bootstrap.min.css">
 
         <!-- Related styles of various icon packs and plugins -->
-        <link rel="stylesheet" href="css/plugins.css">
+        <link rel="stylesheet" href="../../public/css/plugins.css">
 
         <!-- The main stylesheet of this template. All Bootstrap overwrites are defined in here -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../../public/css/main.css">
 
         <!-- The themes stylesheet of this template (for using specific theme color in individual elements - must included last) -->
-        <link rel="stylesheet" href="css/themes.css">
+        <link rel="stylesheet" href="../../public/css/themes.css">
         <!-- END Stylesheets -->
 
         <!-- Modernizr (browser feature detection library) & Respond.js (enables responsive CSS code on browsers that don't support it, eg IE8) -->
-        <script src="js/vendor/modernizr-respond.min.js"></script>
+        <script src="../../public/js/vendor/modernizr-respond.min.js"></script>
     </head>
     <body>
         <!-- Page Container -->
@@ -205,7 +205,7 @@
                                     <div class="col-md-4">
                                         <p>
                                             <a href="blog_post.html">
-                                                <img src="img/placeholders/photos/photo1.jpg" alt="image" class="img-responsive">
+                                                <img src="../../public/img/placeholders/photos/photo1.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
@@ -234,7 +234,7 @@
                                     <div class="col-md-4">
                                         <p>
                                             <a href="blog_post.html">
-                                                <img src="img/placeholders/photos/photo11.jpg" alt="image" class="img-responsive">
+                                                <img src="../../public/img/placeholders/photos/photo11.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
@@ -263,7 +263,7 @@
                                     <div class="col-md-4">
                                         <p>
                                             <a href="blog_post.html">
-                                                <img src="img/placeholders/photos/photo9.jpg" alt="image" class="img-responsive">
+                                                <img src="../../public/img/placeholders/photos/photo9.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
@@ -292,7 +292,7 @@
                                     <div class="col-md-4">
                                         <p>
                                             <a href="blog_post.html">
-                                                <img src="img/placeholders/photos/photo16.jpg" alt="image" class="img-responsive">
+                                                <img src="../../public/img/placeholders/photos/photo16.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
@@ -321,7 +321,7 @@
                                     <div class="col-md-4">
                                         <p>
                                             <a href="blog_post.html">
-                                                <img src="img/placeholders/photos/photo10.jpg" alt="image" class="img-responsive">
+                                                <img src="../../public/img/placeholders/photos/photo10.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
@@ -400,27 +400,27 @@
                                     <div class="tab-content">
                                         <div class="tab-pane active" id="posts-popular">
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar12.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar12.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>How to be more productive</strong></a></h5>
                                                 <small class="text-muted">1 year ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>CSS3 &amp; HTML5 Tutorial</strong></a></h5>
                                                 <small class="text-muted">6 days ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar3.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar3.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>How to push your company forward</strong></a></h5>
                                                 <small class="text-muted">15 days ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar1.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar1.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>How to stop procrastination</strong></a></h5>
                                                 <small class="text-muted">2 years ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar11.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar11.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>New updates and more!</strong></a></h5>
                                                 <small class="text-muted">1 month ago</small>
                                             </div>
@@ -430,27 +430,27 @@
                                         </div>
                                         <div class="tab-pane" id="posts-recent">
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar6.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar6.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>How to push your company forward</strong></a></h5>
                                                 <small class="text-muted">1 day ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar4.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar4.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>New updates and more!</strong></a></h5>
                                                 <small class="text-muted">1 week ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar16.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar16.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>How to be more productive</strong></a></h5>
                                                 <small class="text-muted">2 weeks ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar9.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar9.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>CSS3 &amp; HTML5 Tutorial</strong></a></h5>
                                                 <small class="text-muted">1 month ago</small>
                                             </div>
                                             <div class="content-float clearfix">
-                                                <img src="img/placeholders/avatars/avatar5.jpg" alt="Avatar" class="img-circle pull-left">
+                                                <img src="../../public/img/placeholders/avatars/avatar5.jpg" alt="Avatar" class="img-circle pull-left">
                                                 <h5><a href="javascript:void(0)"><strong>How to stop procrastination</strong></a></h5>
                                                 <small class="text-muted">2 months ago</small>
                                             </div>
@@ -528,8 +528,8 @@
         <script>!window.jQuery && document.write(decodeURI('%3Cscript src="js/vendor/jquery-1.11.2.min.js"%3E%3C/script%3E'));</script>
 
         <!-- Bootstrap.js, Jquery plugins and Custom JS code -->
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/app.js"></script>
+        <script src="../../public/js/vendor/bootstrap.min.js"></script>
+        <script src="../../public/js/plugins.js"></script>
+        <script src="../../public/js/app.js"></script>
     </body>
 </html>
