--- a/app/frontend/about.html
+++ b/app/frontend/about.html
@@ -14,33 +14,33 @@
 
         <!-- Icons -->
         <!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
-        <link rel="shortcut icon" href="img/favicon.png">
-        <link rel="apple-touch-icon" href="img/icon57.png" sizes="57x57">
-        <link rel="apple-touch-icon" href="img/icon72.png" sizes="72x72">
-        <link rel="apple-touch-icon" href="img/icon76.png" sizes="76x76">
-        <link rel="apple-touch-icon" href="img/icon114.png" sizes="114x114">
-        <link rel="apple-touch-icon" href="img/icon120.png" sizes="120x120">
-        <link rel="apple-touch-icon" href="img/icon144.png" sizes="144x144">
-        <link rel="apple-touch-icon" href="img/icon152.png" sizes="152x152">
-        <link rel="apple-touch-icon" href="img/icon180.png" sizes="180x180">
+        <link rel="shortcut icon" href="../../public/img/favicon.png">
+        <link rel="apple-touch-icon" href="../../public/img/icon57.png" sizes="57x57">
+        <link rel="apple-touch-icon" href="../../public/img/icon72.png" sizes="72x72">
+        <link rel="apple-touch-icon" href="../../public/img/icon76.png" sizes="76x76">
+        <link rel="apple-touch-icon" href="../../public/img/icon114.png" sizes="114x114">
+        <link rel="apple-touch-icon" href="../../public/img/icon120.png" sizes="120x120">
+        <link rel="apple-touch-icon" href="../../public/img/icon144.png" sizes="144x144">
+        <link rel="apple-touch-icon" href="../../public/img/icon152.png" sizes="152x152">
+        <link rel="apple-touch-icon" href="../../public/img/icon180.png" sizes="180x180">
         <!-- END Icons -->
 
         <!-- Stylesheets -->
         <!-- Bootstrap is included in its original form, unaltered -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../public/css/bootstrap.min.css">
 
         <!-- Related styles of various icon packs and plugins -->
-        <link rel="stylesheet" href="css/plugins.css">
+        <link rel="stylesheet" href="../../public/css/plugins.css">
 
         <!-- The main stylesheet of this template. All Bootstrap overwrites are defined in here -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../../public/css/main.css">
 
         <!-- The themes stylesheet of this template (for using specific theme color in individual elements - must included last) -->
-        <link rel="stylesheet" href="css/themes.css">
+        <link rel="stylesheet" href="../../public/css/themes.css">
         <!-- END Stylesheets -->
 
         <!-- Modernizr (browser feature detection library) & Respond.js (enables responsive CSS code on browsers that don't support it, eg IE8) -->
-        <script src="js/vendor/modernizr-respond.min.js"></script>
+        <script src="../../public/js/vendor/modernizr-respond.min.js"></script>
     </head>
     <body>
         <!-- Page Container -->
@@ -255,7 +255,7 @@
                             </div>
                             <div class="site-block">
                                 <p class="text-center">
-                                    <img src="img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle">
+                                    <img src="../../public/img/placeholders/avatars/avatar2.jpg" alt="Avatar" class="img-circle">
                                 </p>
                                 <blockquote>
                                     <p>I'm grateful we made it that far and continue strong! Thank you all for supporting us!</p>
@@ -366,12 +366,12 @@
         <script>!window.jQuery && document.write(decodeURI('%3Cscript src="js/vendor/jquery-1.11.2.min.js"%3E%3C/script%3E'));</script>
 
         <!-- Bootstrap.js, Jquery plugins and Custom JS code -->
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/app.js"></script>
+        <script src="../../public/js/vendor/bootstrap.min.js"></script>
+        <script src="../../public/js/plugins.js"></script>
+        <script src="../../public/js/app.js"></script>
 
         <!-- Load and execute javascript code used only in this page -->
-        <script src="js/pages/about.js"></script>
+        <script src="../../public/js/pages/about.js"></script>
         <script>$(function(){ About.init(); });</script>
     </body>
 </html>
