--- a/app/frontend/blog_post.html
+++ b/app/frontend/blog_post.html
@@ -14,33 +14,33 @@
 
         <!-- Icons -->
         <!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
-        <link rel="shortcut icon" href="img/favicon.png">
-        <link rel="apple-touch-icon" href="img/icon57.png" sizes="57x57">
-        <link rel="apple-touch-icon" href="img/icon72.png" sizes="72x72">
-        <link rel="apple-touch-icon" href="img/icon76.png" sizes="76x76">
-        <link rel="apple-touch-icon" href="img/icon114.png" sizes="114x114">
-        <link rel="apple-touch-icon" href="img/icon120.png" sizes="120x120">
-        <link rel="apple-touch-icon" href="img/icon144.png" sizes="144x144">
-        <link rel="apple-touch-icon" href="img/icon152.png" sizes="152x152">
-        <link rel="apple-touch-icon" href="img/icon180.png" sizes="180x180">
+        <link rel="shortcut icon" href="../../public/img/favicon.png">
+        <link rel="apple-touch-icon" href="../../public/img/icon57.png" sizes="57x57">
+        <link rel="apple-touch-icon" href="../../public/img/icon72.png" sizes="72x72">
+        <link rel="apple-touch-icon" href="../../public/img/icon76.png" sizes="76x76">
+        <link rel="apple-touch-icon" href="../../public/img/icon114.png" sizes="114x114">
+        <link rel="apple-touch-icon" href="../../public/img/icon120.png" sizes="120x120">
+        <link rel="apple-touch-icon" href="../../public/img/icon144.png" sizes="144x144">
+        <link rel="apple-touch-icon" href="../../public/img/icon152.png" sizes="152x152">
+        <link rel="apple-touch-icon" href="../../public/img/icon180.png" sizes="180x180">
         <!-- END Icons -->
 
         <!-- Stylesheets -->
         <!-- Bootstrap is included in its original form, unaltered -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../public/css/bootstrap.min.css">
 
         <!-- Related styles of various icon packs and plugins -->
-        <link rel="stylesheet" href="css/plugins.css">
+        <link rel="stylesheet" href="../../public/css/plugins.css">
 
         <!-- The main stylesheet of this template. All Bootstrap overwrites are defined in here -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../../public/css/main.css">
 
         <!-- The themes stylesheet of this template (for using specific theme color in individual elements - must included last) -->
-        <link rel="stylesheet" href="css/themes.css">
+        <link rel="stylesheet" href="../../public/css/themes.css">
         <!-- END Stylesheets -->
 
         <!-- Modernizr (browser feature detection library) & Respond.js (enables responsive CSS code on browsers that don't support it, eg IE8) -->
-        <script src="js/vendor/modernizr-respond.min.js"></script>
+        <script src="../../public/js/vendor/modernizr-respond.min.js"></script>
     </head>
     <body>
         <!-- Page Container -->
@@ -190,7 +190,7 @@
                 <section class="site-section site-section-light site-section-top">
                     <div class="container">
                         <a href="javascript:void(0)">
-                            <img src="img/placeholders/avatars/avatar2.jpg" alt="Author" class="site-top-avatar pull-right img-circle animation-fadeIn360">
+                            <img src="../../public/img/placeholders/avatars/avatar2.jpg" alt="Author" class="site-top-avatar pull-right img-circle animation-fadeIn360">
                         </a>
                         <h1 class="animation-slideDown"><strong>The Mountain Trip</strong></h1>
                         <h2 class="h3 animation-slideUp hidden-xs">Once in a lifetime experience!</h2>
@@ -199,7 +199,7 @@
                 <!-- END Intro -->
 
                 <!-- For best results use an image with a resolution of 2560x279 pixels -->
-                <img src="img/placeholders/headers/blog_post.jpg" alt="Image" class="media-image animation-pulseSlow">
+                <img src="../../public/img/placeholders/headers/blog_post.jpg" alt="Image" class="media-image animation-pulseSlow">
             </div>
             <!-- END Media Container -->
 
@@ -215,15 +215,15 @@
                                 <div class="row push-top-bottom">
                                     <div class="col-sm-6">
                                         <p>
-                                            <a href="img/placeholders/photos/photo1.jpg" data-toggle="lightbox-image">
-                                                <img src="img/placeholders/photos/photo1.jpg" alt="image" class="img-responsive">
+                                            <a href="../../public/img/placeholders/photos/photo1.jpg" data-toggle="lightbox-image">
+                                                <img src="../../public/img/placeholders/photos/photo1.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
                                     <div class="col-sm-6">
                                         <p>
-                                            <a href="img/placeholders/photos/photo21.jpg" data-toggle="lightbox-image">
-                                                <img src="img/placeholders/photos/photo21.jpg" alt="image" class="img-responsive">
+                                            <a href="../../public/img/placeholders/photos/photo21.jpg" data-toggle="lightbox-image">
+                                                <img src="../../public/img/placeholders/photos/photo21.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
@@ -236,22 +236,22 @@
                                 <div class="row push-top-bottom">
                                     <div class="col-sm-4">
                                         <p>
-                                            <a href="img/placeholders/photos/photo14.jpg" data-toggle="lightbox-image">
-                                                <img src="img/placeholders/photos/photo14.jpg" alt="image" class="img-responsive">
+                                            <a href="../../public/img/placeholders/photos/photo14.jpg" data-toggle="lightbox-image">
+                                                <img src="../../public/img/placeholders/photos/photo14.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
                                     <div class="col-sm-4">
                                         <p>
-                                            <a href="img/placeholders/photos/photo18.jpg" data-toggle="lightbox-image">
-                                                <img src="img/placeholders/photos/photo18.jpg" alt="image" class="img-responsive">
+                                            <a href="../../public/img/placeholders/photos/photo18.jpg" data-toggle="lightbox-image">
+                                                <img src="../../public/img/placeholders/photos/photo18.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
                                     <div class="col-sm-4">
                                         <p>
-                                            <a href="img/placeholders/photos/photo22.jpg" data-toggle="lightbox-image">
-                                                <img src="img/placeholders/photos/photo22.jpg" alt="image" class="img-responsive">
+                                            <a href="../../public/img/placeholders/photos/photo22.jpg" data-toggle="lightbox-image">
+                                                <img src="../../public/img/placeholders/photos/photo22.jpg" alt="image" class="img-responsive">
                                             </a>
                                         </p>
                                     </div>
@@ -276,7 +276,7 @@
                             <ul class="media-list">
                                 <li class="media">
                                     <a href="javascript:void(0)" class="pull-left">
-                                        <img src="img/placeholders/avatars/avatar2.jpg" alt="avatar" class="img-circle">
+                                        <img src="../../public/img/placeholders/avatars/avatar2.jpg" alt="avatar" class="img-circle">
                                     </a>
                                     <div class="media-body">
                                         <a href="javascript:void(0)"><strong>John</strong> Doe</a>
@@ -309,7 +309,7 @@
                             <ul class="media-list">
                                 <li class="media">
                                     <a href="javascript:void(0)" class="pull-left">
-                                        <img src="img/placeholders/avatars/avatar12.jpg" alt="Avatar" class="img-circle">
+                                        <img src="../../public/img/placeholders/avatars/avatar12.jpg" alt="Avatar" class="img-circle">
                                     </a>
                                     <div class="media-body">
                                         <span class="text-muted pull-right"><small><em>1 min ago</em></small></span>
@@ -319,7 +319,7 @@
                                 </li>
                                 <li class="media">
                                     <a href="javascript:void(0)" class="pull-left">
-                                        <img src="img/placeholders/avatars/avatar8.jpg" alt="Avatar" class="img-circle">
+                                        <img src="../../public/img/placeholders/avatars/avatar8.jpg" alt="Avatar" class="img-circle">
                                     </a>
                                     <div class="media-body">
                                         <span class="text-muted pull-right"><small><em>10 min ago</em></small></span>
@@ -329,7 +329,7 @@
                                 </li>
                                 <li class="media">
                                     <a href="javascript:void(0)" class="pull-left">
-                                        <img src="img/placeholders/avatars/avatar15.jpg" alt="Avatar" class="img-circle">
+                                        <img src="../../public/img/placeholders/avatars/avatar15.jpg" alt="Avatar" class="img-circle">
                                     </a>
                                     <div class="media-body">
                                         <span class="text-muted pull-right"><small><em>30 min ago</em></small></span>
@@ -339,7 +339,7 @@
                                 </li>
                                 <li class="media">
                                     <a href="javascript:void(0)" class="pull-left">
-                                        <img src="img/placeholders/avatars/avatar.jpg" alt="Avatar" class="img-circle">
+                                        <img src="../../public/img/placeholders/avatars/avatar.jpg" alt="Avatar" class="img-circle">
                                     </a>
                                     <div class="media-body">
                                         <form action="blog_post.html" method="post" onsubmit="return false;">
@@ -407,8 +407,8 @@
         <script>!window.jQuery && document.write(decodeURI('%3Cscript src="js/vendor/jquery-1.11.2.min.js"%3E%3C/script%3E'));</script>
 
         <!-- Bootstrap.js, Jquery plugins and Custom JS code -->
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/app.js"></script>
+        <script src="../../public/js/vendor/bootstrap.min.js"></script>
+        <script src="../../public/js/plugins.js"></script>
+        <script src="../../public/js/app.js"></script>
     </body>
 </html>
