--- a/app/frontend.html
+++ b/app/frontend.html
@@ -12,12 +12,12 @@
 
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0">
 
-        <link rel="shortcut icon" href="/public/favicon.png">
+        <link rel="shortcut icon" href="../public/favicon.png">
 
         <!-- build:css({.tmp,app}) frontend/css/main.css -->
-        <link rel="stylesheet" type="text/css" href="/public/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/public/css/plugins.css">
-        <link rel="stylesheet" type="text/css" href="/public/css/frontend.css">
+        <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../public/css/plugins.css">
+        <link rel="stylesheet" type="text/css" href="../public/css/frontend.css">
         <link rel="stylesheet" type="text/css" href="assets/css/themes.css">
         <!-- endbuild -->
 
