--- a/app/frontend.html
+++ b/app/frontend.html
@@ -15,9 +15,9 @@
         <link rel="shortcut icon" href="../public/favicon.png">
 
         <!-- build:css({.tmp,app}) frontend/css/main.css -->
-        <link rel="stylesheet" type="text/css" href="frontend/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="frontend/plugins.css">
-        <link rel="stylesheet" type="text/css" href="frontend/frontend.css">
+        <link rel="stylesheet" type="text/css" href="frontend/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="frontend/css/plugins.css">
+        <link rel="stylesheet" type="text/css" href="frontend/css/frontend.css">
         <link rel="stylesheet" type="text/css" href="assets/css/themes.css">
         <!-- endbuild -->
 
