--- a/app/frontend.html
+++ b/app/frontend.html
@@ -118,7 +118,7 @@
             </div>
             <div class="container text-center">
               <div class="site-block">
-                <img src="../public/img/SCpromo_all_devices.png" alt="StartupCommunity Promo Image" class="img-responsive visibility-none" data-toggle="animation-appear" data-animation-class="animation-fadeIn" data-element-offset="-100">
+                <img src="frontend/img/SCpromo_all_devices.png" alt="StartupCommunity Promo Image" class="img-responsive visibility-none" data-toggle="animation-appear" data-animation-class="animation-fadeIn" data-element-offset="-100">
               </div>
               <hr>
             </div>
@@ -211,15 +211,15 @@
         <script src="https://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
 
         <!-- build:js frontend/scripts/vendor.js -->
-        <script src="../public/js/vendor/modernizr-respond.min.js"></script>
-        <script src="../public/js/vendor/jquery-1.11.2.min.js"></script>
-        <script src="../public/js/vendor/bootstrap.min.js"></script>
-        <script src="../public/js/helpers/jquery.geocomplete.min.js"></script>
+        <script src="frontend/js/vendor/modernizr-respond.min.js"></script>
+        <script src="frontend/js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="frontend/js/vendor/bootstrap.min.js"></script>
+        <script src="frontend/js/helpers/jquery.geocomplete.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) frontend/scripts/scripts.js -->
-        <script src="../public/js/plugins.js"></script>
-        <script src="../public/js/frontend.js"></script>
+        <script src="frontend/js/plugins.js"></script>
+        <script src="frontend/js/frontend.js"></script>
         <!-- endbuild -->
 
         <script>
