--- a/app/frontend.html
+++ b/app/frontend.html
@@ -14,6 +14,8 @@
 
         <link rel="shortcut icon" href="../public/favicon.png">
 
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,600italic,700,700italic">
+
         <!-- build:css({.tmp,app}) frontend/css/main.css -->
         <link rel="stylesheet" type="text/css" href="frontend/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="frontend/css/plugins.css">
