--- a/app/frontend.html
+++ b/app/frontend.html
@@ -191,7 +191,7 @@
                         <div class="col-sm-6 col-md-3">
                             <h4 class="footer-heading">Our Journey</h4>
                             <ul class="footer-nav list-inline">
-                                <li><a href="/lessons">Startup Community Lessons</a></li>
+                                <li><a href="/blog">Startup Community Lessons</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-6 col-md-3">
