ghost working well

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -120,7 +120,7 @@
             </div>
             <div class="container text-center">
               <div class="site-block">
-                <img src="frontend/img/SCpromo_all_devices.png" alt="StartupCommunity Promo Image" class="img-responsive visibility-none" data-toggle="animation-appear" data-animation-class="animation-fadeIn" data-element-offset="-100">
+                <img src="frontend/img/SCpromo_all_devices.png" alt="StartupCommunity Promo Image" class="img-responsive">
               </div>
               <hr>
             </div>
@@ -132,21 +132,21 @@
             <div class="container text-center">
               <div class="row row-items">
                 <div class="col-sm-4">
-                  <a href="javascript:void(0)" class="circle visibility-none themed-background-fire" data-toggle="animation-appear" data-animation-class="animation-fadeIn360" data-element-offset="-100">
+                  <a href="javascript:void(0)" class="circle themed-background-fire">
                     <i class="icon-flag"></i>
                   </a>
                   <h4 class="site-heading"><strong>Build</strong> Clusters</h4>
                   <p class="text-left remove-margin">Identify the leaders in your community and organize them around industry clusters. Each cluster includes startups, advisors, investors, and resources such as coworking space, incubators, and networking events.</p>
                 </div>
                 <div class="col-sm-4">
-                  <a href="javascript:void(0)" class="circle visibility-none themed-background-modern" data-toggle="animation-appear" data-animation-class="animation-fadeIn360" data-element-offset="-100">
+                  <a href="javascript:void(0)" class="circle themed-background-modern">
                     <i class="icon-graduation-cap"></i>
                   </a>
                   <h4 class="site-heading"><strong>Connect</strong> People</h4>
                   <p class="text-left remove-margin">Startup founders can search for advisors and investors based on skills pulled from Linkedin profiles. Create invite-only networks for alumni of accelerators, universities, and trade organizations.</p>
                 </div>
                 <div class="col-sm-4">
-                  <a href="javascript:void(0)" class="circle visibility-none themed-background-spring" data-toggle="animation-appear" data-animation-class="animation-fadeIn360" data-element-offset="-100">
+                  <a href="javascript:void(0)" class="circle themed-background-spring">
                     <i class="icon-leaf"></i>
                   </a>
                   <h4 class="site-heading"><strong>Measure</strong> Impact</h4>
