--- a/app/frontend.html
+++ b/app/frontend.html
@@ -255,18 +255,19 @@
                 "Investor": investor
               });
 
-              $("#success").toggle();
-              $('#email').val('');
-              $('#location').val('');
-
               $.ajax({
-                type: 'post',
-                url: '//startupcommunity.us9.list-manage.com/subscribe?u=e84a98eb12e090eb0b1a06b80&amp;id=ba6c99c719&amp;c=?',
+                type: 'POST',
+                url: '//startupcommunity.us9.list-manage.com/subscribe/post-json?u=e84a98eb12e090eb0b1a06b80&amp;id=ba6c99c719&amp;c=?',
                 data: { email: email },
                 cache       : false,
                 dataType    : 'json',
                 contentType: "application/json; charset=utf-8"
               });
+
+              $("#success").toggle();
+              $('#email').val('');
+              $('#location').val('');
+
             });
           };
 
