fixed email subscribe on main page

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -256,9 +256,9 @@
               });
 
               $.ajax({
-                type: 'POST',
+                type: 'post',
                 url: '//startupcommunity.us9.list-manage.com/subscribe/post-json?u=e84a98eb12e090eb0b1a06b80&amp;id=ba6c99c719&amp;c=?',
-                data: { email: email },
+                data: { EMAIL: email },
                 cache       : false,
                 dataType    : 'json',
                 contentType: "application/json; charset=utf-8"
