--- a/app/frontend.html
+++ b/app/frontend.html
@@ -12,7 +12,7 @@
 
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0">
 
-        <link rel="shortcut icon" href="../public/favicon.png">
+        <link rel="icon" type="image/png" href="../public/favicon.png">
 
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,600italic,700,700italic">
 
@@ -37,7 +37,7 @@
                 <div class="container">
                     <!-- Site Logo -->
                     <a href="/" class="site-logo">
-                      <img src="assets/img/thumb_28h.png" style="margin-top:-4px; height: 32px; width: 32px;" /> <strong>Startup</strong>Community
+                      <img src="../public/thumb_28h.png" style="margin-top:-4px; height: 32px; width: 32px;" /> <strong>Startup</strong>Community
                     </a>
                     <!-- Site Logo -->
 
@@ -120,7 +120,7 @@
             </div>
             <div class="container text-center">
               <div class="site-block">
-                <img src="frontend/img/SCpromo_all_devices.png" alt="StartupCommunity Promo Image" class="img-responsive">
+                <img src="../public/SCpromo_all_devices.png" alt="StartupCommunity Promo Image" class="img-responsive">
               </div>
               <hr>
             </div>
