--- a/app/app.html
+++ b/app/app.html
@@ -5,7 +5,7 @@
   <title>StartupCommunity.org</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="StartupCommunity.org">
+  <meta name="description" content="Kickstart your city's entreprenurial ecosystem">
   <meta name="author" content="James Gentes">
   <link rel="icon" type="image/png" href="/public/favicon.png">
   <base href="/">
@@ -223,7 +223,6 @@
     <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
-    <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../bower_components/ng-grid/build/ng-grid.js"></script>
     <script src="../bower_components/jquery-autosize/jquery.autosize.js"></script>
