basic UI back on track

--- a/app/app.html
+++ b/app/app.html
@@ -145,7 +145,7 @@
           </li>
           <li class="dropdown" ng-show="isAuthenticated">
 
-            <a class="dropdown-toggle username" data-toggle='dropdown'><span class="hidden-xs">{{global.user.value.name}}</span><img ng-src="{{global.user.value.avatar || global.user.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.value.name}}" style="margin-right: 11px;"/></a>
+            <a class="dropdown-toggle username" data-toggle='dropdown'><span class="hidden-xs">{{global.user.profile.name}}</span><img ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" style="margin-right: 11px;"/></a>
             <ul class="dropdown-menu userinfo arrow">
               <li class="userlinks">
                 <ul class="dropdown-menu">
