--- a/app/index.html
+++ b/app/index.html
@@ -56,8 +56,8 @@
 <script src="scripts/sc.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/config.js"></script>
-<!-- <script src="scripts/directives.js"></script> -->
-<script src="scripts/services.js"></script>
+<script src="scripts/directives.js"></script>
+<script src="scripts/apis.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <!-- endbuild -->
 
