--- a/app/app.html
+++ b/app/app.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Page title set in pageTitle directive -->
+    <base href="/app">
     <title page-title></title>
-    <!--<link rel="shortcut icon" type="image/png" href="favicon.png" />-->
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
