--- a/app/app.html
+++ b/app/app.html
@@ -11,9 +11,11 @@
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="../bower_components/angular-notify/dist/angular-notify.min.css" />
     <link rel="stylesheet" href="../bower_components/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" href="../bower_components/animate.css/animate.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bower_components/sweetalert/lib/sweet-alert.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -29,13 +31,23 @@
 <body ng-controller="mainCtrl" class="{{$state.current.data.specialClass}} fixed-navbar">
 
 <!-- Simple splash screen-->
-<div class="splash"> <div class="bright-line"></div><div class="splash-title"><h1>StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem</h1><img src="images/loading-bars.svg" width="64" height="64" /> </div> </div>
+<div class="splash"> <div class="bright-line"></div><div class="splash-title"><a href="/"><img src="../images/sc_logo.png" alt="StartupCommunity.org Logo"/></a><img src="images/loading-bars.svg" width="64" height="64" /> </div> </div>
 <!--[if lt IE 7]>
 <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
     <!-- Page view wrapper -->
-    <div class="uiview" ui-view></div>
+    <div class="uiview" ui-view style="height: 100%"></div>
+
+<script>
+    UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zK2VtojScbtpM3kB4CRZA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
+    UserVoice.push(['set', {
+        accent_color: '#3498db',
+        trigger_color: 'white',
+        trigger_background_color: '#3498db'
+    }]);
+    UserVoice.push(['addTrigger', { mode: 'contact', trigger_position: 'bottom-left' }]);
+</script>
 
 </body>
 
@@ -45,8 +57,12 @@
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../bower_components/iCheck/icheck.min.js"></script>
+<script src="../bower_components/sweetalert/lib/sweet-alert.min.js"></script>
+<script src="../bower_components/angular-notify/dist/angular-notify.min.js"></script>
 <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 <script src="../bower_components/angular-ui-utils/highlight.min.js"></script>
+<script src="../bower_components/sparkline/index.js"></script>
 <script src="../bower_components/satellizer/satellizer.min.js"></script>
 <script src="../bower_components/mixpanel/mixpanel-jslib-snippet.min.js"></script>
 <script src="../bower_components/angular-mixpanel/src/angular-mixpanel.js"></script>
@@ -58,7 +74,7 @@
 <script src="scripts/config.js"></script>
 <script src="scripts/directives.js"></script>
 <script src="scripts/apis.js"></script>
-<script src="scripts/controllers/main.js"></script>
+<script src="scripts/controllers.js"></script>
 <!-- endbuild -->
 
 </html>
