--- a/app/app.html
+++ b/app/app.html
@@ -31,7 +31,7 @@
 <body ng-controller="mainCtrl" class="{{$state.current.data.specialClass}} fixed-navbar">
 
 <!-- Simple splash screen-->
-<div class="splash"> <div class="bright-line"></div><div class="splash-title"><a href="/"><img src="../images/sc_logo.png" alt="StartupCommunity.org Logo"/></a><img src="images/loading-bars.svg" width="64" height="64" /> </div> </div>
+<div class="splash"> <div class="bright-line"></div><div class="splash-title"><a href="/"><img src="images/sc_logo.png" alt="StartupCommunity.org Logo"/></a><img src="images/loading-bars.svg" width="64" height="64" /> </div> </div>
 <!--[if lt IE 7]>
 <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -48,6 +48,8 @@
     }]);
     UserVoice.push(['addTrigger', { mode: 'contact', trigger_position: 'bottom-left' }]);
 </script>
+
+<script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
 
 </body>
 
@@ -66,6 +68,7 @@
 <script src="../bower_components/satellizer/satellizer.min.js"></script>
 <script src="../bower_components/mixpanel/mixpanel-jslib-snippet.min.js"></script>
 <script src="../bower_components/angular-mixpanel/src/angular-mixpanel.js"></script>
+<script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
