map is working fuck

--- a/app/app.html
+++ b/app/app.html
@@ -61,11 +61,13 @@
         trigger_background_color: '#3498db'
     }]);
 </script>
+
 </body>
+
+<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDXO1cNiJac7iP2I3JoXhOd1pWs6gA-f4k'></script>
 
 <!-- build:js(.) scripts/vendor.js -->
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/lodash/lodash.min.js"></script> <!-- req'd for angular-google-maps -->
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -78,8 +80,8 @@
 <script src="../bower_components/sparkline/index.js"></script>
 <script src="../bower_components/satellizer/satellizer.min.js"></script>
 <script src="../bower_components/mixpanel/mixpanel-jslib-snippet.min.js"></script>
-<script src="../bower_components/angular-mixpanel/src/angular-mixpanel.js"></script>
-<script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+<script src="../bower_components/angular-mixpanel/dist/angular-mixpanel.min.js"></script>
+<script src="../bower_components/ngmap/build/scripts/ng-map.min.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
