--- a/app/app.html
+++ b/app/app.html
@@ -37,17 +37,17 @@
 <![endif]-->
 
     <!-- Page view wrapper -->
-    <div class="uiview" ui-view style="height: 100%"></div>
-
+    <div class="uiview footwrap" ui-view style="height: 100%"></div>
+<div class="push"></div>
 <footer>
     <div class="col-md-4">
         <ul class="list-unstyled list-inline">
-            <li style="color: #bbb; padding-top: 2px;">&copy; StartupCommunity.org</li>
+            <li style="color: #bbb; padding-top: 2px; margin-left: 8px;">&copy; StartupCommunity.org</li>
         </ul>
     </div>
     <div class="col-xs-12 col-md-8">
         <ul class="list-unstyled list-inline pull-right">
-            <li style="color: #aaa;" random-quote></li>
+            <li style="color: #aaa; padding-right: 20px;" random-quote></li>
             <button class="pull-right btn btn-default btn-xs hidden-print" back-to-top><i class="fa fa-angle-up"></i></button>
         </ul>
     </div>
