--- a/app/app.html
+++ b/app/app.html
@@ -71,6 +71,7 @@
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../bower_components/iCheck/icheck.min.js"></script>
 <script src="../bower_components/sweetalert/lib/sweet-alert.min.js"></script>
