path resolves with params

--- a/app/app.html
+++ b/app/app.html
@@ -37,7 +37,7 @@
 <![endif]-->
 
     <!-- Page view wrapper -->
-    <div class="uiview footwrap" ui-view style="height: 100%"></div>
+    <div class="uiview footwrap" ui-view></div>
 <div class="push"></div>
 <footer>
     <div class="col-md-4">
