moving to state params for profile

--- a/app/app.html
+++ b/app/app.html
@@ -37,7 +37,7 @@
 <![endif]-->
 
     <!-- Page view wrapper -->
-    <div class="uiview footwrap" ui-view></div>
+    <div class="uiview footwrap" ui-view style="height: 100%;"></div>
 <div class="push"></div>
 <footer>
     <div class="col-md-4">
@@ -47,7 +47,7 @@
     </div>
     <div class="col-xs-12 col-md-8">
         <ul class="list-unstyled list-inline pull-right">
-            <li style="color: #aaa; padding-right: 20px;" random-quote></li>
+            <li style="color: #fff; padding-right: 20px;" random-quote></li>
             <button class="pull-right btn btn-default btn-xs hidden-print" back-to-top><i class="fa fa-angle-up"></i></button>
         </ul>
     </div>
