working on people view

--- a/app/app.html
+++ b/app/app.html
@@ -37,21 +37,7 @@
 <![endif]-->
 
     <!-- Page view wrapper -->
-    <div class="uiview footwrap" ui-view style="height: 100%;"></div>
-<div class="push"></div>
-<footer>
-    <div class="col-md-4">
-        <ul class="list-unstyled list-inline">
-            <li style="color: #bbb; padding-top: 2px; margin-left: 8px;">&copy; StartupCommunity.org</li>
-        </ul>
-    </div>
-    <div class="col-xs-12 col-md-8">
-        <ul class="list-unstyled list-inline pull-right">
-            <li style="color: #fff; padding-right: 20px;" random-quote></li>
-            <button class="pull-right btn btn-default btn-xs hidden-print" back-to-top><i class="fa fa-angle-up"></i></button>
-        </ul>
-    </div>
-</footer>
+    <div ui-view autoscroll="true"></div>
 
 <script>
     UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zK2VtojScbtpM3kB4CRZA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
