working profile again

--- a/app/app.html
+++ b/app/app.html
@@ -37,7 +37,7 @@
 <![endif]-->
 
     <!-- Page view wrapper -->
-    <div ui-view autoscroll="true"></div>
+    <div ui-view></div>
 
 <script>
     UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/zK2VtojScbtpM3kB4CRZA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
@@ -58,7 +58,6 @@
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script src="../bower_components/lodash/lodash.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../bower_components/iCheck/icheck.min.js"></script>
 <script src="../bower_components/sweetalert/lib/sweet-alert.min.js"></script>
