--- a/app/app.html
+++ b/app/app.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/sweetalert/lib/sweet-alert.css" />
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.min.css" />
+    <link rel="stylesheet" href="../bower_components/angular-chart.js/dist/angular-chart.css">
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -37,6 +38,7 @@
 <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 <!--[if lt IE 9]>
+<script src="excanvas.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js"></script>
 <script>
@@ -80,6 +82,8 @@
 <script src="../bower_components/angular-mixpanel/dist/angular-mixpanel.min.js"></script>
 <script src="../bower_components/ngmap/build/scripts/ng-map.min.js"></script>
 <script src="../bower_components/angular-ui-select/dist/select.min.js"></script>
+<script src="../bower_components/Chart.js/Chart.min.js"></script>
+<script src="../bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
