about to remove context

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -224,7 +224,7 @@
           $(document).ready(function(){
 
             $('#signIn').click(function() {
-              window.location.replace("/app");
+              window.location.replace("/login");
             });
 
           });
