--- a/app/app.html
+++ b/app/app.html
@@ -60,6 +60,16 @@
     }]);
 </script>
 
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-58555092-2', 'auto');
+
+</script>
+
 </body>
 
 <!-- build:js(.) scripts/vendor.js -->
@@ -83,6 +93,8 @@
 <script src="../bower_components/angular-ui-select/dist/select.min.js"></script>
 <script src="../bower_components/Chart.js/Chart.min.js"></script>
 <script src="../bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
+<script src="../bower_components/angulartics/dist/angulartics.min.js"></script>
+<script src="../bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
