--- a/app/app.html
+++ b/app/app.html
@@ -105,6 +105,14 @@
 <script src="scripts/directives.js"></script>
 <script src="scripts/apis.js"></script>
 <script src="scripts/controllers.js"></script>
+<script src="components/industries/industries.controller.js"></script>
+<script src="components/locations/locations.controller.js"></script>
+<script src="components/networks/networks.controller.js"></script>
+<script src="components/people/people.controller.js"></script>
+<script src="components/startups/startups.controller.js"></script>
+<script src="components/common/login/login.controller.js"></script>
+<script src="components/common/navigation/navigation.controller.js"></script>
+<script src="components/common/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
 </html>
