--- a/app/app.html
+++ b/app/app.html
@@ -30,7 +30,7 @@
 </head>
 
 <!-- Body -->
-<body ng-controller="MainController" class="{{$state.current.data.specialClass}} fixed-navbar">
+<body class="{{$state.current.data.specialClass}} fixed-navbar">
 
 <!-- Simple splash screen-->
 <div class="splash"> <div class="bright-line"></div><div class="splash-title"><a href="/"><img src="images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="images/loading-bars.svg" width="64" height="64" /> </div> </div>
