people page working

--- a/app/app.html
+++ b/app/app.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <base href="/app">
+    <base href="/">
     <title page-title></title>
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
 
@@ -104,7 +104,6 @@
 <script src="scripts/directives.js"></script>
 <script src="scripts/apis.js"></script>
 <script src="scripts/config.js"></script>
-<script src="scripts/controllers.js"></script>
 <script src="components/industries/industries.controller.js"></script>
 <script src="components/locations/locations.controller.js"></script>
 <script src="components/networks/networks.controller.js"></script>
@@ -112,6 +111,7 @@
 <script src="components/startups/startups.controller.js"></script>
 <script src="components/common/auth/auth.controller.js"></script>
 <script src="components/common/nav/nav.controller.js"></script>
+<script src="components/common/content/content.controller.js"></script>
 <script src="components/common/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
