--- a/app/app.html
+++ b/app/app.html
@@ -99,7 +99,7 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="scripts/sc.js"></script>
+<script src="scripts/misc.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/directives.js"></script>
 <script src="scripts/apis.js"></script>
