--- a/app/app.html
+++ b/app/app.html
@@ -112,6 +112,7 @@
 <script src="components/common/auth/auth.controller.js"></script>
 <script src="components/common/nav/nav.controller.js"></script>
 <script src="components/common/header/header.controller.js"></script>
+<script src="components/common/search/search.controller.js"></script>
 <script src="components/common/errors/errors.controller.js"></script>
 <!-- endbuild -->
 
