--- a/app/app.html
+++ b/app/app.html
@@ -102,7 +102,7 @@
 <script src="scripts/misc.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/directives.js"></script>
-<script src="scripts/apis.js"></script>
+<script src="scripts/services.js"></script>
 <script src="scripts/config.js"></script>
 <script src="components/industries/industries.controller.js"></script>
 <script src="components/locations/locations.controller.js"></script>
