--- a/app/app.html
+++ b/app/app.html
@@ -108,7 +108,7 @@
 <script src="components/industries/industries.controller.js"></script>
 <script src="components/locations/locations.controller.js"></script>
 <script src="components/networks/networks.controller.js"></script>
-<script src="components/people/people.controller.js"></script>
+<script src="components/users/users.controller.js"></script>
 <script src="components/startups/startups.controller.js"></script>
 <script src="components/common/auth/auth.controller.js"></script>
 <script src="components/common/nav/nav.controller.js"></script>
