--- a/app/app.html
+++ b/app/app.html
@@ -7,7 +7,7 @@
 
     <base href="/">
     <title page-title></title>
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
