figured out window._knowtify

--- a/app/app.html
+++ b/app/app.html
@@ -54,16 +54,13 @@
     <!-- Page view wrapper -->
     <div ui-view></div>
 
-<!-- Hotjar Tracking Code for startupcommunity.org -->
 <script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:68181,hjsv:5};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+    var _knowtify = _knowtify || [];
+    var _knowtifyInbox = _knowtifyInbox || [];
+    _knowtify.public_token = "697926551ec864a9c587bafbfa318beb";
+
+    (function(d,s,t,u){var j = d.createElement(s);var p = d.getElementsByTagName(s)[0];
+        j.type = t;j.async = true;j.src = u;p.parentNode.insertBefore(j, p);})(document,'script','text/javascript', 'http://js.knowtify.io/knowtify.js');
 </script>
 
 
